<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.ing</groupId>
    <artifactId>ingenious-playwright</artifactId>
    <version>3.1.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>StoryWriter</module>
        <module>Datalib</module>
        <module>TestData - Csv</module>
        <module>Engine</module>
        <module>IDE</module>
        <module>Common</module>
        <module>Dist</module>
    </modules>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <playwright.version>1.58.0</playwright.version>
        <commons-cli.version>1.4</commons-cli.version>
        <javamail.version>1.4.7</javamail.version>
        <json-simple.version>1.1.1</json-simple.version>
        <jcsv.version>1.4.0</jcsv.version>
        <javafx.version>17.0.14</javafx.version>
        <jackson.version>2.15.2</jackson.version>
        <commonscsv.version>1.10.0</commonscsv.version>
        <commons-codec.version>1.16.0</commons-codec.version>
        <commons-io.version>2.15.0</commons-io.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <annon.detect>3.0.5</annon.detect>
        <jetty.version>9.4.57.v20241219</jetty.version>
        <gherkin.version>5.0.0</gherkin.version>
        <autocomplete.version>3.0.0</autocomplete.version>
        <apache.poi.version>5.2.5</apache.poi.version>
        <apache.poi.schemas.version>4.1.2</apache.poi.schemas.version>
        <httpclient.version>4.5.14</httpclient.version>
        <extentreport.version>5.1.2</extentreport.version>
        <playwright.axe.version>4.11.1</playwright.axe.version>
        <testng.version>7.7.1</testng.version>
        <freemarker.version>2.3.32</freemarker.version>
        <stax-api.version>1.0.1</stax-api.version>
        <xmlbeans.version>3.0.2</xmlbeans.version>
        <json-path.version>2.9.0</json-path.version>
        <checker-compat-qual.version>2.0.0</checker-compat-qual.version>
        <java-string-similarity.version>2.0.0</java-string-similarity.version>
        <checker-qual.version>3.33.0</checker-qual.version>
        <error_prone_annotations.version>2.18.0</error_prone_annotations.version>
        <gson.version>2.10.1</gson.version>
        <j2objc-annotations.version>2.8</j2objc-annotations.version>
        <slf4j-api.version>2.0.7</slf4j-api.version>
        <commons-lang.version>2.6</commons-lang.version>
        <httpcore.version>4.4.16</httpcore.version>
        <guava.version>32.0.1-jre</guava.version>
        <appium.version>10.0.0</appium.version>
        <javafaker.version>1.0.2</javafaker.version>
        <kafka-clients.version>3.9.0</kafka-clients.version>
        <avro.version>1.12.0</avro.version>
        <kafka-avro-serializer.version>7.8.0</kafka-avro-serializer.version>
        <ibmmq.version>9.4.5.0</ibmmq.version>
        <mac.version>mac-aarch64</mac.version>
        <setupDir>../Dist/release</setupDir>
        <resourceDir>../Resources</resourceDir>
        <ingenious-api.version>3.0</ingenious-api.version>

        <flatlaf.version>3.5.4</flatlaf.version>
        <ikonli.version>12.3.1</ikonli.version>

        <mockito.version>5.14.2</mockito.version>
        <assertj.version>3.26.3</assertj.version>

        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

    </properties>
    <name>ingenious</name>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>Dist</directory>
                            <includes>
                                <include>release/**/*</include>
                                <include>release</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <!-- JaCoCo for code coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- OWASP Dependency Check — run via: mvn dependency-check:check -->
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>11.1.1</version>
                <configuration>
                    <failBuildOnCVSS>7</failBuildOnCVSS>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.18.0</version>
            </plugin>
            <plugin>
                <groupId>com.hubspot.maven.plugins</groupId>
                <artifactId>prettier-maven-plugin</artifactId>
                <version>0.22</version> <!-- Check for the latest version on Maven Central -->
                <configuration>
                    <!-- Optional: specific Prettier settings -->
                    <printWidth>100</printWidth>
                    <tabWidth>4</tabWidth>
                    <useTabs>false</useTabs>
                </configuration>
                <executions>
                    <execution>
                    <phase>validate</phase>
                    <goals>
                        <goal>write</goal> <!-- Use 'check' in CI environments -->
                    </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
